css/sentienceinstitute.scss
/* ... */
.predicting-the-moral-consideration-of-artificial-intelligences-container{
  // Italics
  .c9{
  font-style: italic;
  }
}

.eoy2022-container {
  .c2, .c4.c2 {
    font-style: italic;
  }
  //.c7 {
  //  padding-bottom: 15px;
  //}

  .c4.c9, .c9 {
    font-weight: $bold-weight;
    }

//  .c10.c13 {
//  padding-bottom: 5px;
//  }
}

.longtermism-and-animal-farming-trajectories-container {
  // Italics
  .c17, .c0.c3, .c0{
  font-style: italic;
  }
}

.digital-suffering-why-its-a-problem-and-how-to-prevent-it-container {
  // Italics
  .c2.c1, .c1{
  font-style: italic;
  }
}

.what-would-qualify-an-artificial-intelligence-for-moral-standing-container {
  // Italics
  .c0.c1{
  font-style: italic;
  }
}

.key-questions-for-digital-minds-container {
  // Italics
  .c4.c7{
  font-style: italic;
  }

  .c3.c19{
  font-style: italic;
  }

  .c4.c19{
  font-style: italic;
  }

  // TOC
  .c12{
  margin-bottom: 0px;
  }

  .c11{
  margin-bottom: 0px;
  margin-left: 30px;
  }
}

.moral-spillover-in-human-ai-interaction-container {
  // Italics
  .c0.c6{
  font-style: italic;
  }

  .c17.c18{
    font-weight: $bold-weight;
    }

  .c7.c17{
      font-weight: $bold-weight;
      }

  .c13.c14.c20{
    margin-bottom: 0px;
    margin-left: 30px;
  }

  // table
  table, td {
  border: 1px solid $dark-grey;
  table-layout: fixed;
  width: 100%
  }

  table {
    p {
      margin-left: 5px;
    }
  }

      // TOC
      .c23{
      margin-bottom: 0px;
      }

      .c23.c50{
      margin-bottom: 0px;
      margin-left: 30px;
      }
}

.moral-circle-expansion-vs-reducing-extinction-risk-container{
  // Italics
  .c16.c12.c17{
  font-style: italic;
  }

  // ToC
  table:first-of-type {
    tr{
      display: flex;
      td {
        p {
          font-weight: $normal-weight;
          margin: 0;
        }
      }
      .c23 {
        margin-left: 30px;
      }
    }
  }

  .c1.c21 {
    margin-left: 30px;
  }
}

[href="/blog/how-is-SI-research-different"] .blog-item-image{
  background-position: left;
}

[href="/blog/what-can-the-farmed-animal-movement-learn-from-history"] .blog-item-image{
  background-position: right;
}

[href="/blog/what-we-can-do-in-2018-with-your-support"] .blog-item-image{
  background-position: right;
}

[href="/blog/three-big-changes"] .blog-item-image{
  background-position: left;
}

@media (max-width: 767px){
  .podcast-container {
    .podcast-info {
      flex-direction: column;

      .podcast-img {
        margin-right: 0;
        margin-bottom: $large-space;
      }
    }
  }
}

